Site: fix layout issues due to margin collapsing

--- a/_sass/minutia/_base.scss
+++ b/_sass/minutia/_base.scss
@@ -88,8 +88,8 @@ ul, ol, dl, figure,
 hr {
     color: $lighter-gray;
     border-style: solid;
-    margin-top: $spacing-unit;
-    margin-bottom: $spacing-unit;
+    margin-top: calc($spacing-unit / 4);
+    margin-bottom: calc($spacing-unit * 3/4);
 }
 
 /* Images */
@@ -208,7 +208,7 @@ h1 {
 }
 
 h2 {
-    margin-top: $spacing-unit;
+    margin-top: calc($spacing-unit / 2);
     margin-bottom: $spacing-unit;
 
     @include relative-font-size(1.625);
@@ -219,7 +219,7 @@ h2 {
 }
 
 h3 {
-    margin-top: calc(3 * $spacing-unit / 4);
+    // margin-top: calc($spacing-unit / 4);
     margin-bottom: calc(3 * $spacing-unit / 4);
 
     @include relative-font-size(1.375);
